--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,9 @@
   ],
   "dependencies": {
     "angular": "~1.2.20"
+  },
+  "devDependencies": {
+    "mocha": "~1.20.1",
+    "chai": "~1.9.1"
   }
 }
