--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "load-grunt-tasks": "~0.6.0",
     "grunt-mocha-test": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-concurrent": "~0.5.0"
+    "grunt-concurrent": "~0.5.0",
+    "grunt-mocha": "~0.4.11"
   }
 }
