--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "mocha": "~1.20.1",
-    "chai": "~1.9.1"
+    "chai": "~1.9.1",
+    "angular-mocks": "~1.2.20"
   }
 }
