--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.20"
+    "angular": "~1.2.20",
+    "bootstrap-sass-official": "~3.2.0"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
