--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-mocha-test": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-concurrent": "~0.5.0",
-    "grunt-mocha": "~0.4.11"
+    "grunt-mocha": "~0.4.11",
+    "grunt-contrib-sass": "~0.7.3"
   }
 }
