--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
   ],
   "dependencies": {
     "angular": "~1.2.20",
-    "bootstrap-sass-official": "~3.2.0"
+    "bootstrap-sass-official": "~3.2.0",
+    "angular-resource": "~1.2.20"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
