--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-concurrent": "~0.5.0",
     "grunt-mocha": "~0.4.11",
-    "grunt-contrib-sass": "~0.7.3"
+    "grunt-contrib-sass": "~0.7.3",
+    "grunt-ng-annotate": "~0.3.0",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-processhtml": "~0.3.3"
   }
 }
